Fix HTML formatting and update contact links

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <a href="mailto:mohitsah635@gmail.com">
       <i class="fa-solid fa-envelope"></i> Email
     </a>
-    <a href="https://www.linkedin.com" target="_blank">
+    <a href="https://"https://www.linkedin.com/in/mohit-shah-18a06b248?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app target="_blank">
       <i class="fa-brands fa-linkedin"></i> LinkedIn
     </a>
-    <a href="https://www.instagram.com" target="_blank">
+    <a href="https://"https://www.instagram.com/iammohitsah?igsh=YTd6OHhqOWJ2NjE5 target="_blank">
       <i class="fa-brands fa-instagram"></i> Instagram
     </a>
     <p><i class="fa-solid fa-phone"></i> +91 7501045459</p>
@@ -163,3 +163,4 @@
 
 </body>
 </html>
+
