Refactor contact section for accessibility and links
Updated contact section with improved accessibility attributes and corrected links.

--- a/index.html
+++ b/index.html
@@ -143,16 +143,27 @@
   <h2 class="heading">Contact Me</h2>
 
   <div class="social-icons">
-    <a href="mailto:mohitsah635@gmail.com">
-      <i class="fa-solid fa-envelope"></i> Email
+    
+    <a href="mailto:mohitsah635@gmail.com" aria-label="Send Email">
+      <i class="fa-solid fa-envelope"></i>
+      <span>Email</span>
     </a>
-    <a href="https://"https://www.linkedin.com/in/mohit-shah-18a06b248?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app target="_blank">
-      <i class="fa-brands fa-linkedin"></i> LinkedIn
+
+    <a href="https://www.linkedin.com/in/mohit-shah-18a06b248/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
+      <i class="fa-brands fa-linkedin"></i>
+      <span>LinkedIn</span>
     </a>
-    <a href="https://"https://www.instagram.com/iammohitsah?igsh=YTd6OHhqOWJ2NjE5 target="_blank">
-      <i class="fa-brands fa-instagram"></i> Instagram
+
+    <a href="https://www.instagram.com/iammohitsah/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Profile">
+      <i class="fa-brands fa-instagram"></i>
+      <span>Instagram</span>
     </a>
-    <p><i class="fa-solid fa-phone"></i> +91 7501045459</p>
+
+    <a href="tel:+917501045459" aria-label="Call Phone Number">
+      <i class="fa-solid fa-phone"></i>
+      <span>+91 7501045459</span>
+    </a>
+
   </div>
 </section>
 
@@ -163,4 +174,5 @@
 
 </body>
 </html>
+
 
