--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mohitsah635@gmail.com" target="_blank">
         <i class="fa-solid fa-envelope"></i>
       </a>
-      <a href="https://www.linkedin.com" target="_blank">
-        <i class="fa-brands fa-linkedin"></i>
-      </a>
-      <a href="https://www.instagram.com" target="_blank">
-        <i class="fa-brands fa-instagram"></i>
+     <a href="https://www.linkedin.com/in/mohit-shah-18a06b248/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
+      <i class="fa-brands fa-linkedin"></i>
+      
+    </<a href="https://www.instagram.com/iammohitsah/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Profile">
+      <i class="fa-brands fa-instagram"></i>
       </a>
       <a href="tel:7501045459">
         <i class="fa-solid fa-phone"></i>
@@ -63,7 +63,7 @@
 </section>
 
 <!-- ================= ABOUT ================= -->
-<section id="about">
+<section id="about"
   <h2 class="heading">About Me</h2>
 
   <div class="about-images">
@@ -174,5 +174,6 @@
 
 </body>
 </html>
+
 
 
